--- a/_drafts/前端之道.md
+++ b/_drafts/前端之道.md
@@ -11,3 +11,38 @@
 ## js 基础
 
 参考[JS : The Right Way](http://jstherightway.org/)。
+
+
+
+著名交互设计师Jared Spool曾总结出优秀的设计模式库应有的元素，它们包括：
+
+- 模式名称（Pattern Name）
+- 描述（Description）
+- 应用场景（Context of Use）
+- 在何处使用（Where to Use it）
+- 原理（How it Works）
+- 规范详情（Specifications）
+- 相关模式（Related Patterns）
+- 其他实现模式（Competitive Approaches）
+- 源代码（Source Code）
+- 可用性研究结果（Usability Research）
+- 讨论（Discussion）
+
+
+设计模式
+[《Learning JavaScript Design Patterns》](http://addyosmani.com/resources/essentialjsdesignpatterns/book/)
+
+测试
+http://qunitjs.com/
+
+
+[《Web前端开发十日谈》](http://blog.jobbole.com/25114/)
+
+这篇淘宝前端@拔赤写的文章，大家看下，老少皆宜，前后通杀。
+
+它可以帮你回答这些问题：
+
+- 前端工程师的初、中、高和专家级之间如何界定？
+- 我处在何处？
+- 接下来怎么走？
+- 架构的精髓是什么?
