--- a/_drafts/前端之道.md
+++ b/_drafts/前端之道.md
@@ -31,6 +31,7 @@
 
 设计模式
 [《Learning JavaScript Design Patterns》](http://addyosmani.com/resources/essentialjsdesignpatterns/book/)
+《javascript设计模式》
 
 测试
 http://qunitjs.com/
@@ -46,3 +47,4 @@ http://qunitjs.com/
 - 我处在何处？
 - 接下来怎么走？
 - 架构的精髓是什么?
+
