--- a/_posts/2015-07-22-bower.md
+++ b/_posts/2015-07-22-bower.md
@@ -101,6 +101,19 @@ bower的其他常用命令：
 
 ## 使用.bowerrc进行bower工具配置
 
+通过根目录下的.bowerrc文件配置bower工具，你可以配置下载目录，下载、上传、搜索的、
+服务器，甚至git的url的格式。
+
 {% highlight javascript %}
+
+  {
+    // 设置下载目录
+    "directory" : "js/lib",
+    // 设置远程服务器
+    registry : "http://localhost",
+    // 设置git url格式
+    shorthand-resolver : "git://example.com/{{owner}}/components/{{package}}.git"
+  }
+
 {% endhighlight %}
 
