--- a/_posts/2015-07-22-bower.md
+++ b/_posts/2015-07-22-bower.md
@@ -79,7 +79,7 @@ bower的其他常用命令：
     // 开发时所需的依赖，配置同dependencies
     "devDependencies" : {},
     // 模块类型
-    moduleType : [
+    "moduleType" : [
       "globals", // 全局变量形式
       "amd", // AMD模式，例如requirejs
       "node", // Commonjs形式
@@ -87,12 +87,12 @@ bower的其他常用命令：
       "yui" // yahoo形式
     ],
     // 包的关键词
-    keywords : [
+    "keywords" : [
       "test",
       "element",
       "polymer"
     ],
-    author : [
+    "author" : [
       'Nobody no@expamle.com'
     ]
   }
@@ -110,9 +110,9 @@ bower的其他常用命令：
     // 设置下载目录
     "directory" : "js/lib",
     // 设置远程服务器
-    registry : "http://localhost",
+    "registry" : "http://localhost",
     // 设置git url格式
-    shorthand-resolver : "git://example.com/{{owner}}/components/{{package}}.git"
+    "shorthand-resolver" : "git://example.com/{{owner}}/components/{{package}}.git"
   }
 
 {% endhighlight %}
