--- a/_drafts/考核纪要.md
+++ b/_drafts/考核纪要.md
@@ -54,3 +54,9 @@
 - 拿出便于对方有效参与的合作方案，协商调整彼此目标或需求的优先级，确保双方核心目标的达成，实现共赢
 - 及时同步过程中的重要信息，沟通坦诚，对事不对人
 - 在合作过程中帮助对方提升和成长，通过成就他人来获得自己的成功
+
+
+2015-07-24 评审纪要
+1. 技术要拔尖，技术要储备。
+2. 带动组内成员
+3. 带动公司前端
