--- a/_drafts/人员安排.md
+++ b/_drafts/人员安排.md
@@ -13,13 +13,18 @@ F. 客栈   1PC 2APP
 G. 周末卡 1PC 2APP
 H. 标签页 1PC
 I. 专题
+W. 微信站点
 
 人员分配：
 
 戴 A3~5 E1（PC终，下单、订单中心，十元pc）
+
 陆 A1~2 B1~5（pc首、列，手机站）
+邓 H1（标签页）辅助陆处理手机站。
+
 杜 C1~2 E2（亲子，十元app）
+谢 F1~2（客栈）辅助@杜
+
 周 D1~2 G1~2（特卖，周末卡）
-谢 F1~2（客栈）
-邓 H1（标签页）
-何 后面1~2个月先弄专题。
+何 辅助@周处理特卖方面。
+
