--- a/_posts/2015-08-20-bigpipe.md
+++ b/_posts/2015-08-20-bigpipe.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Bigpipe：facebook加速大型页面首屏时间的技术方案"
+title:  "BigPipe：facebook加速大型页面首屏时间的技术方案"
 ---
 
-Bigpipe是提升大型页面首屏时间的技术方案。
+BigPipe是提升大型页面首屏时间的技术方案。
 
 对应大型页面，提升首屏时间传统的方案是将页面分成各个小的子模块，首屏的时候只显示
 主页面的框架，再ajax获取这些子模块。
@@ -14,7 +14,7 @@ Bigpipe是提升大型页面首屏时间的技术方案。
 所以能不能既可以把页面分成各个子模块分块渲染，提升首屏时间，又能减少ajax请求减少
 服务器压力。
 
-Bigpipe就是为了做到上述两点。
+BigPipe就是为了做到上述两点。
 
 那它怎么做到这一点的能，关键技术就是服务器的输出缓冲。
 
