--- a/_posts/2015-08-21-directjs.md
+++ b/_posts/2015-08-21-directjs.md
@@ -50,7 +50,7 @@ director.js在浏览器端利用``#hash``来实现路由控制和无刷新，使
     //.. do the same thing as browser side.
   })
 
-  // 反应函数做下改变，输出使用this.res
+  // 对应的函数做下改变，输出使用this.res
   function getAuthor(){
     this.res.end('get author');
   }
