--- a/_posts/2015-08-21-directjs.md
+++ b/_posts/2015-08-21-directjs.md
@@ -56,3 +56,7 @@ director.js在浏览器端利用``#hash``来实现路由控制和无刷新，使
   }
 
 {% endhighlight %}
+
+参考：
+
+- [director.js](https://github.com/flatiron/director)
