--- a/_posts/2015-08-26-mocha.md
+++ b/_posts/2015-08-26-mocha.md
@@ -76,7 +76,7 @@ mocha
 
 {% endhighlight %}
 
-## 获取代码覆盖率报告
+## 5. 获取代码覆盖率报告
 
 代码覆盖率简而言之就是有多少代码被测试到了，这个报告从侧面反映了测试的完整性、可
 靠性。
@@ -104,7 +104,7 @@ istanbul cover _mocha
 
 {% endhighlight %}
 
-## 5. 最佳实践
+## 6. 最佳实践
 
 上面的繁琐的命令可以写入``package.json``，这样会操作简化。
 
