--- a/_drafts/人员安排.md
+++ b/_drafts/人员安排.md
@@ -13,16 +13,17 @@ F. 客栈   1PC 2APP
 G. 周末卡 1PC 2APP
 H. 标签页 1PC
 I. 专题
+L. 8元
 W. 微信站点
 
 人员分配：
 
 戴 A3~5 E1（PC终，下单、订单中心，十元pc）
 
-陆 A1~2 B1~5（pc首、列，手机站）
+陆 A1~2 B1~5（pc首、列，手机站）W微信
 邓 H1（标签页）辅助陆处理手机站。
 
-杜 C1~2 E2（亲子，十元app）
+杜 C1~2 E2（亲子，十元app）L8元
 谢 F1~2（客栈）辅助@杜
 
 周 D1~2 G1~2（特卖，周末卡）
