--- a/_drafts/人员安排.md
+++ b/_drafts/人员安排.md
@@ -28,4 +28,14 @@ W. 微信站点
 
 周 D1~2 G1~2（特卖，周末卡）
 何 辅助@周处理特卖方面。
+陈
+郭
 
+# 课题分享
+
+戴华 - react教程
+谢晓阳 - 高性能javascript
+杜荣璋 - web性能优化
+周倩 - 为克服HTML在构建应用上的不足而设计!---AngularJS
+陆中泽 - Font Awesome
+邓佳鹏 - 响应式设计
