--- a/_drafts/前端面试.md
+++ b/_drafts/前端面试.md
@@ -1,5 +1,30 @@
 # 前端面试
 
+## 价值观
+
+- 对加班的看法
+- 家在哪,是否愿意在苏州工作，对于离开家乡工作怎么看
+
+## 自学能力
+
+- 除了学校的课程外，还学过什么，为什么？
+- 平时经常看的技术站点有哪些，有写过博文之类的吗？
+
+## 动手能力
+
+- 学习期间是否参与过项目，可以谈谈自己负责工作的具体内容？
+- 有没有个人站点？
+
+## 沟通协调能力
+
+- 在校是否参加过社团、组织过社团
+
+## 其他
+
+- 是否考虑过深造
+
+## 专业知识
+
 - 最近的项目
 - 最引以为豪的项目
 - 你遇到过比较难的技术问题是？你是如何解决的？
@@ -41,7 +66,6 @@ HTML5、CSS3、移动端适应。
 - 内存泄露是什么，哪些会造成内存泄露
 - javascript里面的继承怎么实现，如何避免原型链上面的对象共享
 - 闭包
-
 
 ## 其他
 
