--- a/_posts/2015-10-27-es6.md
+++ b/_posts/2015-10-27-es6.md
@@ -8,7 +8,7 @@ title:  "ES6语法精选"
 es6标准大多数浏览器还未支持，nodejs的话也要0.11版本以上，但是我们可以通过google开
 发的``Traceur``编译器将es6编译成es5，从而在低版本的浏览器和服务器上使用。
 
-{% highlight shell %}
+{% highlight bash %}
 
 # 安装traceur
 npm install -g traceur
