--- a/_drafts/人员安排.md
+++ b/_drafts/人员安排.md
@@ -39,3 +39,12 @@ W. 微信站点
 周倩 - 为克服HTML在构建应用上的不足而设计!---AngularJS
 陆中泽 - Font Awesome
 邓佳鹏 - 响应式设计
+
+
+
+项目熟悉
+
+1. 业务流程
+2. 主要难点
+
+PC => 手机、微信 => 亲子 => 特卖 => 十元、八元
