--- a/_drafts/前端培训安排.md
+++ b/_drafts/前端培训安排.md
@@ -1,7 +1,19 @@
 # 前端培训安排
 
-前端技术基础（html/css/js）
-前端开发工具（chrome/fiddler/git/git flow）
-前端代码规范（js/css）
-前端js设计模式
-前端组件化/模块化
+
+大公司的特点
+
+1. 模块化
+  - 类库模块化 CMD/AMD/commonjs
+  - 业务包模块化 npm/bower
+2. 自动化 grunt/glup
+3. 代码在线压缩，cdn缓存
+4. 前端代码增量发布系统
+  - git持续集成
+  - 基于nodejs的可视化界面
+//5. 一套底层的基础库
+//6. 一套底层的业务库
+
+
+新框架的愿景：
+使用es6进行模块化开发，项目支持自动测试和生成文档，并通过持续集成自动发布。
