--- a/_posts/2016-03-16-regex.md
+++ b/_posts/2016-03-16-regex.md
@@ -3,7 +3,7 @@ layout: post
 title:  "正则表达式速记"
 ---
 
-### 常用元字符
+## 常用元字符
 
 |元字符|匹配|
 |------|--------------------|
@@ -17,7 +17,7 @@ title:  "正则表达式速记"
 
 ![常用字符串](/assets/regex/1.png)
 
-### 常用反义字符
+## 常用反义字符
 
 |元字符|匹配|
 |------|--------------------|
@@ -28,7 +28,7 @@ title:  "正则表达式速记"
 |[^x]  |除了x以外的任意字符|
 |[^abc]|除了a、b、c以外的任意字符|
 
-### 字符重复次数
+## 字符重复次数
 
 |元字符|匹配|
 |------|------------|
@@ -39,13 +39,13 @@ title:  "正则表达式速记"
 |{n,m} |重复n到m次|
 |{n,}  |重复n次以上|
 
-### 字符集范围
+## 字符集范围
 
 使用`[]`中括号来定义范围，例如匹配数字1~5可以使用`[1~5]`。
 
 ![字符集范围](/assets/regex/2.png)
 
-### 分枝，分组
+## 分枝，分组
 
 使用“|”来实现分支。匹配`12345-1234`中的`12345-1234`或者`12345`可以使用`\d{5}-\d{4}|\d{5}`
 表达式。值得注意的是分支顺序，分支是按先左后右的方式来匹配的。
@@ -54,7 +54,7 @@ title:  "正则表达式速记"
 
 ![字符集范围](/assets/regex/3.png)
 
-### 特殊的分组语法——捕获、零宽断言、注释
+## 特殊的分组语法——捕获、零宽断言、注释
 
 |分类     |元字符       |匹配             |
 |---------|-------------|-----------------|
@@ -69,13 +69,13 @@ title:  "正则表达式速记"
 
 ![特殊的分组语法——捕获、零宽断言、注释](/assets/regex/4.png)
 
-### 贪婪与懒惰
+## 贪婪与懒惰
 
 贪婪：匹配尽可能多的。列如`a.*b`匹配`aabab`为`aabab`。
 
 懒惰：匹配尽可能少的。例如`a.*?b`匹配`aabab`为`ab`。
 
-### 处理选项
+## 处理选项
 
 - IgnoreCase(忽略大小写)：匹配时不区分大小写。
 - Multiline(多行模式)：更改^和$的含义，使它们分别在任意一行的行首和行尾匹配，而不
